<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_rounded"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Folder name with icon -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/note_24" />

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/note_name"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNoteDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_created_date_june_17_2023"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#DDDDDD" />

    <LinearLayout
        android:id="@+id/optionPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivPinIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_pin"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/tvPinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionRecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_recover" />

        <TextView
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <!-- Move to -->
    <LinearLayout
        android:id="@+id/optionMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_move" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_to"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <!-- Copy to -->
    <LinearLayout
        android:id="@+id/optionCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_copy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_to"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <!-- Delete -->
    <LinearLayout
        android:id="@+id/optionDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:layout_marginStart="12dp" />
    </LinearLayout>

</LinearLayout>
